# ams2-ai-creator

./: .gitignore  AMS2-AI-Creator.spec  AMS2-Creator.spec  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
ams2_ai/: __init__.py  logging_config.py  validation.py
ams2_ai/data/: __init__.py  countries.json  country_meta.json  track_meta.json  tracks.json  vehicle_classes.json
ams2_ai/identity/: __init__.py  generator.py  romanize.py
ams2_ai/models/: __init__.py  document.py  driver.py  driver_profile.py  header_meta.py  parameters.py
ams2_ai/smart/: derivation.py  presets.py
ams2_ai/ui/: app.py  collapsible_section.py  dialogs.py  driver_accordion.py  driver_editor.py  file_sidebar.py  icons.py  load_worker.py  loading_dialog.py  main_window.py  parameter_panel.py  parameter_row.py  theme.py  xml_properties_panel.py
ams2_ai/ui/styles/: ams2.qss
ams2_ai/util/: assets.py  filenames.py
ams2_ai/xml/: __init__.py  reader.py  writer.py
ams2_shared/: __init__.py  launcher.py  logging_config.py
ams2_shared/ui/: theme.py
ams2_shared/util/: assets.py
ams2_skins/: __init__.py  validation.py
ams2_skins/catalog/: entry.py  limits.py  scanner.py
ams2_skins/data/: livery_limits.json
ams2_skins/export/: skinpack.py
ams2_skins/models/: __init__.py  car_document.py  livery_override.py  livery_slot.py  skinpack.py  texture.py
ams2_skins/ui/: app.py  catalog_worker.py  dialogs.py  livery_panel.py  livery_slot_editor.py  main_window.py  pack_sidebar.py  setup_bar.py  validation_panel.py
ams2_skins/xml/: dist_parser.py  reader.py  writer.py
assets/icon/: icon-artwork.psd
docs/example_ai_files/: F-Classic_Gen4.xml  F-Hitech_Gen1.xml  F-Hitech_Gen2.xml  F-Ultimate_Gen2.xml  F-V8_Gen1.xml  FE-G1.xml  LES_2025.xml  LMDh.xml  StockCarV8.xml
docs/example_skinpacks/StockCar STOCKPAP 2020/Vehicles/Textures/CustomLiveries/Overrides/stock_cruze_20/: stock_cruze_20.xml
docs/example_skinpacks/StockCar STOCKPAP 2020/Vehicles/Textures/CustomLiveries/Overrides/stock_cruze_20/campap/AW_03/: preview.dds
docs/example_skinpacks/StockCar STOCKPAP 2020/Vehicles/Textures/CustomLiveries/Overrides/stock_cruze_20/campap/AW_09/: preview.dds
docs/example_skinpacks/StockCar STOCKPAP 2020/Vehicles/Textures/CustomLiveries/Overrides/stock_cruze_20/campap/Anibbas_06/: bool.dds  preview.dds
docs/example_skinpacks/StockCar STOCKPAP 2020/Vehicles/Textures/CustomLiveries/Overrides/stock_cruze_20/campap/Astralopitecos_39/: preview.dds
docs/example_skinpacks/StockCar STOCKPAP 2020/Vehicles/Textures/CustomLiveries/Overrides/stock_cruze_20/campap/BSS_23/: bool.dds
docs/example_skinpacks/StockCar STOCKPAP 2020/Vehicles/Textures/CustomLiveries/Overrides/stock_cruze_20/campap/BSS_32/: bool.dds  preview.dds
docs/example_skinpacks/StockCar STOCKPAP 2020/Vehicles/Textures/CustomLiveries/Overrides/stock_cruze_20/campap/BSS_33/: preview.dds
docs/example_skinpacks/StockCar STOCKPAP 2020/Vehicles/Textures/CustomLiveries/Overrides/stock_cruze_20/campap/CRT_19/: preview.dds
docs/example_skinpacks/StockCar STOCKPAP 2020/Vehicles/Textures/CustomLiveries/Overrides/stock_cruze_20/campap/CRT_47/: preview.dds
docs/example_skinpacks/StockCar STOCKPAP 2020/Vehicles/Textures/CustomLiveries/Overrides/stock_cruze_20/campap/D3_91/: preview.dds
docs/example_skinpacks/StockCar STOCKPAP 2020/Vehicles/Textures/CustomLiveries/Overrides/stock_cruze_20/campap/Lobini_08/: preview.dds
docs/example_skinpacks/StockCar STOCKPAP 2020/Vehicles/Textures/CustomLiveries/Overrides/stock_cruze_20/campap/RC_25/: preview.dds
docs/example_skinpacks/UserData/CustomAIDrivers/: StockCarV8_2020.xml
docs/example_skinpacks/Vehicles/Textures/CustomLiveries/Overrides/stock_cruze_20/campap/AW_09/: bool.dds
docs/example_skinpacks/Vehicles/Textures/CustomLiveries/Overrides/stock_cruze_20/campap/AW_28/: preview.dds
docs/example_skinpacks/Vehicles/Textures/CustomLiveries/Overrides/stock_cruze_20/campap/Anibbas_13/: preview.dds
docs/example_skinpacks/Vehicles/Textures/CustomLiveries/Overrides/stock_cruze_20/campap/Anibbas_20/: preview.dds
docs/example_skinpacks/Vehicles/Textures/CustomLiveries/Overrides/stock_cruze_20/campap/Astralopitecos_51/: preview.dds
docs/example_skinpacks/Vehicles/Textures/CustomLiveries/Overrides/stock_cruze_20/campap/BSS_23/: preview.dds
docs/example_skinpacks/Vehicles/Textures/CustomLiveries/Overrides/stock_cruze_20/campap/BSS_33/: bool.dds
docs/example_skinpacks/Vehicles/Textures/CustomLiveries/Overrides/stock_cruze_20/campap/CRT_12/: preview.dds
docs/example_skinpacks/Vehicles/Textures/CustomLiveries/Overrides/stock_cruze_20/campap/D3_50/: preview.dds
docs/example_skinpacks/Vehicles/Textures/CustomLiveries/Overrides/stock_cruze_20/campap/Lobini_07/: preview.dds
docs/example_skinpacks/Vehicles/Textures/CustomLiveries/Overrides/stock_cruze_20/campap/Lobini_55/: preview.dds
docs/example_skinpacks/Vehicles/Textures/CustomLiveries/Overrides/stock_cruze_20/campap/RC_36/: bool.dds  preview.dds
docs/example_skinpacks/Vehicles/Textures/CustomLiveries/Overrides/stock_cruze_20/campap/RC_46/: preview.dds
docs/example_skinpacks/minimal_fixture/Vehicles/Textures/CustomLiveries/Overrides/stock_cruze_20/: stock_cruze_20.xml  stock_cruze_20_dist.xml
scripts/: build_icon.py  build_track_meta.py  build_windows.bat  build_windows.ps1
tests/: conftest.py  test_data.py  test_derivation.py  test_dist_parser.py  test_driver_profile.py  test_filenames.py  test_header_meta.py  test_identity_generator.py  test_internal_save.py  test_parameters.py  test_presets.py  test_romanize.py  test_skin_validation.py  test_skin_xml_roundtrip.py  test_skinpack_export.py  test_track_catalog.py  test_ui_smoke.py  test_xml_roundtrip.py
