[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ams2-ai-creator"
version = "0.1.0"
description = "Desktop tool to create and manage Automobilista 2 custom AI driver XML files"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["PySide6>=6.6", "Faker>=24", "Unidecode>=1.3"]

[project.scripts]
ams2-ai-creator = "ams2_ai.ui.app:main"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.8", "pyinstaller>=6"]
dev-gui = ["pytest-qt>=4"]

[tool.hatch.build.targets.wheel]
packages = ["ams2_ai"]

[tool.hatch.build.targets.wheel.force-include]
"ams2_ai/data/countries.json" = "ams2_ai/data/countries.json"
"ams2_ai/data/country_meta.json" = "ams2_ai/data/country_meta.json"
"ams2_ai/data/tracks.json" = "ams2_ai/data/tracks.json"
"ams2_ai/data/track_meta.json" = "ams2_ai/data/track_meta.json"
"ams2_ai/data/vehicle_classes.json" = "ams2_ai/data/vehicle_classes.json"
"ams2_ai/data/flags" = "ams2_ai/data/flags"
"assets/fonts" = "assets/fonts"
"assets/icon" = "assets/icon"
"ams2_ai/ui/styles" = "ams2_ai/ui/styles"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
