[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ams2-ai-creator"
version = "1.0.0"
description = "Visual desktop editor for Automobilista 2 custom AI driver XML files — names, nationalities, personalities, and track overrides."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Douglas Tomacheski de Abreu e Silva (RockettSally)" },
]
keywords = [
    "automobilista",
    "ams2",
    "racing",
    "sim-racing",
    "ai",
    "xml",
    "pySide6",
    "reiza",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Utilities",
]
dependencies = ["PySide6>=6.6", "Faker>=24", "Unidecode>=1.3"]

[project.urls]
Homepage = "https://github.com/DoToMaSi/ams2-ai-creator"
Documentation = "https://github.com/DoToMaSi/ams2-ai-creator#readme"
Repository = "https://github.com/DoToMaSi/ams2-ai-creator"
Issues = "https://github.com/DoToMaSi/ams2-ai-creator/issues"
Changelog = "https://github.com/DoToMaSi/ams2-ai-creator/releases"

[project.scripts]
ams2-ai-creator = "ams2_ai.ui.app:main"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.8", "pyinstaller>=6", "pillow>=10"]
dev-gui = ["pytest-qt>=4"]

[tool.hatch.build.targets.wheel]
packages = ["ams2_ai"]

[tool.hatch.build.targets.wheel.force-include]
"ams2_ai/data/countries.json" = "ams2_ai/data/countries.json"
"ams2_ai/data/country_meta.json" = "ams2_ai/data/country_meta.json"
"ams2_ai/data/tracks.json" = "ams2_ai/data/tracks.json"
"ams2_ai/data/track_meta.json" = "ams2_ai/data/track_meta.json"
"ams2_ai/data/vehicle_classes.json" = "ams2_ai/data/vehicle_classes.json"
"ams2_ai/data/flags" = "ams2_ai/data/flags"
"assets/fonts" = "assets/fonts"
"assets/icon" = "assets/icon"
"ams2_ai/ui/styles" = "ams2_ai/ui/styles"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
